nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-nginx
  namespace: boleto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
        - name: nginx
          configMap:
            name: nginx-config
        - name: staticfiles
          persistentVolumeClaim:
            claimName: staticfiles-pvc
      containers:
        - name: nginx
          image: nginx:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
              name: nginx
            - mountPath: "/app/static"
              name: staticfiles
