django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-web
  namespace: boleto
spec:
  selector:
    app: django-web
  ports:
    - name: http
      port: 9000
      targetPort: 9000
