django-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  namespace: boleto
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: boleto.local
      http:
        paths:
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-web
                port:
                  number: 9000
